DomBusGateway

Developed by Creasol - https://www.creasol.it/domotics

2025-05-xx Rev 0.1
First version with initial support to 
* DomBus
* MQTT-AD
* Telnet